--- a/README
+++ b/README
@@ -3,4 +3,5 @@ Sonix OS
 
 This is a simple x86_64 32bit operating system. Sonix name is taken from my username Solindek and crossed it with Unix name. Kernel is written in C Programming language but bootloader is written in Netwide Assembly (NASM).
 
-(This helped me sooo much some of code is from here)[https://github.com/FRosner/FrOS/]
+This helped me sooo much some of code is from here: 
+https://github.com/FRosner/FrOS/
