Github README update

--- a/README
+++ b/README
@@ -7,3 +7,15 @@ This is a simple x86_64 32bit operating system. Sonix name is taken from my user
 This helped me sooo much some of code is from here: 
 https://github.com/cfenollosa/os-tutorial
 https://github.com/FRosner/FrOS/
+
+To build this OS you need to open cmd in folder where is Makefile file and write this command:
+make
+
+To build OS you need this packages:
+- 86x_64-elf-gcc 
+- 86x_64-elf-ld 
+- x86_64-elf-gdb
+- qemu-system-i386
+- nasm
+- ndisasm
+- cat
